<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/color_picker_root"
    android:tag="layout/dialog_color_picker_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/header"
        android:background="#20000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/back"
            android:tag="binding_1"
            android:background="@null"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/action_back"
            app:tint="#FFFFFF"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:tag="binding_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/action_done"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="12dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#88FFFFFF"
            android:hint="@string/color_value_hex"
            android:layout_weight="2">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_hex"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#88FFFFFF"
            app:boxStrokeColor="#FF0000"
            android:hint="@string/color_value_red"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_r"
                android:textColorHint="#88FFFFFF"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#88FFFFFF"
            android:hint="@string/color_value_green"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_g"
                android:textColorHint="#88FFFFFF"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#88FFFFFF"
            android:hint="@string/color_value_blue"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_b"
                android:textColorHint="#88FFFFFF"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#88FFFFFF"
            android:hint="@string/color_value_alpha"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_a"
                android:textColorHint="#88FFFFFF"
                android:textColor="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="6dp">
        <dev1503.opentbui.view.ColorPicker
            android:id="@+id/picker"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <dev1503.opentbui.view.ColorHuePicker
            android:id="@+id/hue"
            android:padding="10dp"
            android:layout_width="42dp"
            android:layout_height="match_parent"/>
        <dev1503.opentbui.view.ColorAlphaPicker
            android:id="@+id/alpha"
            android:padding="10dp"
            android:layout_width="42dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>